<resources>
    <string name="app_name">Soap Tracker</string>
    <string name="title_activity_soap_tracker_main">SoapTrackerMain</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="date_in">Preparation Date</string>
    <string name="date_out">Curing Date</string>
    <string name="duration">Duration</string>
    <string name="condition">Soap Condition</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_soap_main">SoapMain</string>
    <string name="title_activity_soap_healing_healed">SoapHealingHealed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_drawer">Soap Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_about">Soap tracker is not just a lye calculator app, but also it helps you keep track of the soaps you are preparing</string>

    <string name="copy_right" translatable="false">Copyrights © %1$d</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="new_recipe">Create New Recipe</string>
    <string name="my_recipe">My Recipes</string>
    <string name="profiles">My Profile</string>
    <string name="exit_app">Exit App</string>
    <string name="about_us">About us</string>
    <string name="sample_recipes">Sample Recipes</string>
    <string name="buy_raw">Buy Raw Ingredients</string>
    <string name="add_oils">Add the oils you will use </string>
    <string name="add_fragrance">Add the fragrance / Essential oils to be used </string>
    <string name="add_water">Choose NaoH : H20 Concentration</string>


</resources>
