<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_icon_add"
            android:title="@string/new_recipe" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group2">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icon_icon_recipe"
            android:title="@string/my_recipe" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group3">

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icon_icon_cart"
            android:title="@string/buy_raw" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group4">

        <item
            android:id="@+id/nav_sample_recipes"
            android:icon="@drawable/icon_icon_sample"
            android:title="@string/sample_recipes" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group5">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_icon_profile"
            android:title="@string/profiles" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group7">

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/icon_icon_about_us"
            android:title="@string/about_us" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group6">

        <item
            android:id="@+id/nav_exit_app"
            android:icon="@drawable/icon_exit_app"
            android:title="@string/exit_app" />
    </group>


</menu>
