<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoapTracker.Activities.SingleSoapDetails">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:layout_margin="5dp"
            android:id="@+id/imageView"
            android:gravity="center" />

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@drawable/ic_action_alert_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="Soap name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvSoapName"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="Activated Black soap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@drawable/ic_action_date_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="@string/date_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvDateIn"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="@string/date_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageButton
                android:onClick="CalenderView"
                android:id="@+id/calender_DateIn"
                android:background="@drawable/ic_action_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@drawable/ic_action_date_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginStart="10dp"
                    android:text="@string/date_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvDateOut"
                    android:layout_marginStart="10dp"
                    android:text="@string/date_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>



            </LinearLayout>


            <ImageButton
                android:onClick="CalenderView"
                android:id="@+id/calender_DateOut"
                android:background="@drawable/ic_action_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@drawable/ic_action_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="@string/duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvDurationTaken"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@drawable/ic_action_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="@string/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvSoapCondition"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="@string/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:text="See Ingredients / Notes"
            android:id="@+id/btn_MoreDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>